--- a/project/src/main/res/values-zh-rTW/strings.xml
+++ b/project/src/main/res/values-zh-rTW/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">下一步：選擇退房日期</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - 選擇退房日期</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 位旅客</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">拖曳以修改</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">客房整潔度</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">客房舒適度</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">服務與員工</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">飯店狀況</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">駕駛者資訊</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">付款詳細資訊</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">付款方式</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">輸入駕駛者資訊</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s 或類似車款</string>
     <string name="car_model_unknown_template">找不到完全符合條件的車款</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">航廈櫃台與車輛</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">今天付款</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">行程已傳送到</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">前往 %1$s 的路線</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">信用卡/金融卡</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google 電子錢包</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">旅客資訊</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">輸入您的資訊</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">付款詳細資訊</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">選擇付款類型</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">搜尋活動</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">搜尋交通</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">請選擇日期</string>
     <!-- Activity details highlights heading -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">租車</string>
     <!-- Activities -->
     <string name="nav_lx">活動</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">交通</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">選擇入住日期</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}，{guests} 位旅客</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}，{guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">單程 &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">請輸入有效的電子郵件地址。</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">需要在飯店支付的費用：</string>
+    <string name="fees_paid_at_hotel">在飯店支付的費用</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">今天應付給 {brand}：</string>
+    <string name="due_to_brand_today_TEMPLATE">應付給 {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">飯店將會收取休閒設施費 &lt;b&gt;%1$s&lt;/b&gt;。您住宿的總價為 &lt;b&gt;%2$s&lt;/b&gt;。</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">旅客資訊</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">主要旅客資訊</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">輸入主要旅客資訊</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">主要旅客</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">已儲存</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">透過電子郵件分享</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">新增到行事曆</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">使用 FlightTrack 追蹤班機</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">來電 {brand} 客服中心</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">前往%s的班機</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s，%2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">飯店路線</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">%1$s租車</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">選擇客房</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">電話預訂</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">僅限 +VIP Access 飯店</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">僅限 +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">開</string>
     <string name="switch_off">關</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">旅客推薦</string>
     <string name="hotel_guest_recommend">/ 5 - 旅客評分</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">設施服務</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">不提供設施</string>
     <!-- Business center amenity -->
@@ -2595,7 +2646,7 @@
     <!-- Parking amenity -->
     <string name="AmenityParking">停車場</string>
     <!-- Room service amenity -->
-    <string name="AmenityRoomService">客房服務</string>
+    <string name="AmenityRoomService">客房送餐服務</string>
     <!-- Accessible path of travel amenity -->
     <string name="AmenityAccessiblePaths">無障礙步道</string>
     <!-- Accessible bathroom amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d 則評語</item>
         <item quantity="other">%d 則評語</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">沒有評語</item>
+        <item quantity="one">查看 %d 則評語</item>
+        <item quantity="two">查看 %d 則評語</item>
+        <item quantity="many">查看 %d 則評語</item>
+        <item quantity="other">查看 %d 則評語</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,6 +2757,10 @@
     <string name="total_price_for_stay">住宿價格總計</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">每晚平均價格</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">每晚平均價格 • {count} 個結果</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">總房價 • {count} 個結果</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">沒有空房！</item>
@@ -2705,6 +2769,8 @@
         <item quantity="many">只剩 %d 間客房！</item>
         <item quantity="other">只剩 %d 間客房！</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">客房資訊</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">不可退款</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">查看客房</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">分享到</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">內部整修通知</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">更多資訊</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">很抱歉，我們找不到更多此客房的資料。</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 晚</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">使用</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">已儲存的優惠券</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">優惠券及促銷活動</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">輸入優惠或促銷代碼</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">輸入優惠代碼</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">您節省了 %s！</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">正在刪除優惠券</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">送出</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">很抱歉，這不是有效的優惠代碼。</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">很抱歉，此優惠代碼無效。</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">很抱歉，此飯店不接受優惠券。</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">很抱歉，此優惠券不適用於此飯店。</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">很抱歉，此優惠券不適用於此預訂。</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">很抱歉，目前無法處理優惠券。請再試一次。</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">很抱歉，平均每晚價格未達使用此優惠券的最低要求。</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">優惠券不適用於入住飯店才付款的客房，請選擇立即線上付款的客房。</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">很抱歉，此優惠券已失效。</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">已清除個人資料</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">所有儲存的帳單和聯絡資訊皆已清除。</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">訂閱</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">關注</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">歡迎使用 Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">此電子郵件地址已經有一個 Expedia 帳戶</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 歲)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">鄰近地區</string>
+    <string name="gym">健身房</string>
+    <string name="room_service">客房送餐服務</string>
+    <string name="business_center">商務中心</string>
+    <string name="accessible">無障礙設施</string>
+    <string name="amenities">設施服務</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">星級評等</string>
 </resources>
