--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Næste: Vælg udtjekningsdato</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Vælg udtjekningsdato</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 gæst</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Træk for at ændre</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Rengøring på værelset</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Værelsets komfort</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Service og personale</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Hotellets tilstand</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Oplysninger om fører</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Betalingsoplysninger</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Betalingsmuligheder</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Indtast oplysninger om fører</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s eller lignende</string>
     <string name="car_model_unknown_template">Nøjagtig bilmodel ikke tilgængelig</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Skranke samt køretøj i terminalen</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">Til betaling i dag</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Rejseplan sendt til</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Rutevejledning til %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Kreditkort/debitkort</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Oplysninger om gæst</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Indtast dine oplysninger</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Betalingsoplysninger</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Vælg betalingstype</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Søg efter aktiviteter</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Søg efter transport</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Vælg dato</string>
     <!-- Activity details highlights heading -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Biler</string>
     <!-- Activities -->
     <string name="nav_lx">Aktiviteter</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transport</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Vælg indtjekningsdato</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} gæster</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Enkeltbillet for &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Indtast en gyldig e-mailadresse</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Gebyrer der betales på hotellet:</string>
+    <string name="fees_paid_at_hotel">Gebyrer der betales på hotellet</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">Beløb der skal betales til {brand} i dag:</string>
+    <string name="due_to_brand_today_TEMPLATE">Beløb der skal betales til {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">Resortgebyret på &lt;b&gt;%1$s&lt;/b&gt; vil blive opkrævet på hotellet. Den samlede pris for dit ophold er &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Oplysninger om rejsende</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Oplysninger om den primære rejsende</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Indtast oplysninger om den primære rejsende</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Den primære rejsende</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Gemt</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Del via e-mail</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Tilføj til kalender</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Følg flyafgange med FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Ring til {brand}s kundeservice</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Fly til %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Rutevejledning til hotellet</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Lej en bil i %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Vælg værelse</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Reserver via telefon</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Kun +VIP Access-hoteller</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Kun +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">TIL</string>
     <string name="switch_off">FRA</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">af gæster anbefaler</string>
     <string name="hotel_guest_recommend">af 5 - gæstebedømmelse</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Faciliteter</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">Der tilbydes ingen ekstra faciliteter</string>
     <!-- Business center amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d anmeldelser</item>
         <item quantity="other">%d anmeldelser</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Ingen anmeldelser</item>
+        <item quantity="one">Vis %d anmeldelse</item>
+        <item quantity="two">Vis %d anmeldelser</item>
+        <item quantity="many">Vis %d anmeldelser</item>
+        <item quantity="other">Vis %d anmeldelser</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,6 +2757,10 @@
     <string name="total_price_for_stay">Samlet pris for opholdet</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Gennemsnitspris, pr. nat</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Gennemsnitspris pr. nat • {count} resultater</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Samlet pris for opholdet • {count} resultater</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">Ingen værelser tilbage!</item>
@@ -2705,6 +2769,8 @@
         <item quantity="many">Kun %d værelser tilbage!</item>
         <item quantity="other">Kun %d værelser tilbage!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Værelsesoplysninger</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">Kan ikke refunderes</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Se værelse</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Del via</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renoveringsmeddelelse</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Mere information</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Vi beklager, men vi kunne ikke finde ekstra detaljer om dette værelse.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 nat</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Anvend</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Gemte kuponer</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Kuponer og kampagner</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Indtast kupon- eller kampagnekode</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Indtast kuponkode</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">Du har sparet %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Fjerner kupon</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Send</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Beklager, vi kan ikke genkende denne kuponkode.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Beklager, men dette er ikke en gyldig kuponkode.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Beklager, men dette hotel accepterer ikke kuponer.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">Beklager, men kuponen kan ikke anvendes på dette hotel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Beklager, men kuponen kan ikke anvendes på denne reservation.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Beklager, men vi kan ikke behandle kuponkoder i øjeblikket. Forsøg venligst igen.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">Beklager, men gennemsnitsprisen pr. overnatning opfylder ikke minimumsbeløbet for anvendelse af denne kupon.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Kuponen kan ikke anvendes til hotelværelser, der betales senere. Vælg venligst betalingsmuligheden \&apos;Betal nu\&apos;.</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Beklager, men denne kupon er ikke længere aktiv.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Personlige oplysninger er slettet</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Alle gemte betalings- og kontaktoplysninger er blevet slettet.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Tilmeld dig</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Følg</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Velkommen til Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Der findes allerede en Expedia-konto med denne e-mailadresse</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 år gammel)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Kvarterer</string>
+    <string name="gym">Motionscenter</string>
+    <string name="room_service">Roomservice</string>
+    <string name="business_center">Forretningscenter</string>
+    <string name="accessible">Handicapvenlig</string>
+    <string name="amenities">Faciliteter</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Antal stjerner</string>
 </resources>
