--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Siguiente: Selecciona fecha de salida</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Selecciona fecha de salida</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 persona</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Arrastra para modificar</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Limpieza de la habitación</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Comodidad de la habitación</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Servicios y personal</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Estado del hotel</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Datos del conductor</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Datos de pago</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Opciones de pago</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Introducir datos del conductor</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s o similar</string>
     <string name="car_model_unknown_template">Modelo exacto desconocido</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Mostrador y vehículo en la terminal</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">A pagar hoy</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Itinerario enviado a</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Instrucciones para llegar a %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Tarjeta de crédito o débito</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Datos del huésped</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Introduce tus datos</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Datos de pago</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Selecciona el tipo de pago</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Buscar actividades</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Buscar transporte</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Seleccionar fecha</string>
     <!-- Activity details highlights heading -->
@@ -881,7 +920,7 @@
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Verificación de correo electrónico</string>
     <!-- Linking your accounts -->
-    <string name="linking_your_accounts">Enlazando cuentas…</string>
+    <string name="linking_your_accounts">Conectando cuentas…</string>
     <!-- User Denied email permission try again button text -->
     <string name="authorize_email_facebook_button">Autorizar verificación de correo electrónico</string>
     <!-- User Denied email permission re-request message -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Vehículos</string>
     <!-- Activities -->
     <string name="nav_lx">Actividades</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transporte</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Selecciona la fecha de entrada</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} personas</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Ida por &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Introduce una dirección de correo electrónico válida</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Tasas de pago directo en el hotel:</string>
+    <string name="fees_paid_at_hotel">Tasas a pagar en el hotel</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">A pagar a {brand} hoy:</string>
+    <string name="due_to_brand_today_TEMPLATE">A pagar a {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">El hotel cargará una tasa de complejo turístico de &lt;b&gt;%1$s&lt;/b&gt; cuando llegues. El precio total de tu estancia es de &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Datos del viajero</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Datos del viajero principal</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Introduce los datos del viajero principal</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Viajero principal</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Guardado</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Compartir por correo electrónico</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Añadir al calendario</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Rastrear con FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Llamar al servicio de atención al cliente de {brand}</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Vuelos a %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Instrucciones para llegar al hotel</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Alquilar coche en %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Elegir habitación</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Reservar por teléfono</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">Acceso VIP+</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Solo hoteles con acceso VIP+</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Solo Acceso VIP+</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ENCENDER</string>
     <string name="switch_off">APAGAR</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">de los clientes lo recomiendan</string>
     <string name="hotel_guest_recommend">de 5 - Puntuación de los huéspedes</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount} %</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Servicios</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">Ningún servicio adicional</string>
     <!-- Business center amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d opiniones</item>
         <item quantity="other">%d opiniones</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Sin opiniones</item>
+        <item quantity="one">Ver %d opinión</item>
+        <item quantity="two">Ver %d opiniones</item>
+        <item quantity="many">Ver %d opiniones</item>
+        <item quantity="other">Ver %d opiniones</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,6 +2757,10 @@
     <string name="total_price_for_stay">Precio total de la estancia</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Precio medio por noche</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Precio medio por noche • {count} resultados</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Precio total de la estancia • {count} resultados</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">¡No quedan habitaciones!</item>
@@ -2705,6 +2769,8 @@
         <item quantity="many">¡Solo quedan %d habitaciones!</item>
         <item quantity="other">¡Solo quedan %d habitaciones!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Información de la habitación</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">No reembolsable</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Ver habitación</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Compartir por</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Aviso de obras</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Más información</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">No se han encontrado detalles adicionales para esta habitación.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 noche</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Canjear</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Cupones guardados</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Cupones y promociones</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Introduce un cupón o un código promocional</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Introduce el código del cupón</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">¡Has ahorrado %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Eliminando cupón…</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Enviar</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Lo sentimos, pero este código de descuento no existe.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Lo sentimos, pero este código de descuento no es válido.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Lo sentimos, pero este hotel no acepta cupones de descuento.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">No se puede aplicar el cupón de descuento a esta reserva de hotel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">No se puede aplicar el cupón de descuento a esta reserva.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Lo sentimos, pero no podemos aplicar cupones de descuento en este momento. Vuelve a intentarlo.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2862,6 +2940,8 @@
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">No es posible aplicar cupones de descuento en reservas del tipo "Pagar más tarde", selecciona la opción "Pagar ahora".
 </string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Este cupón ya no está activo.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2894,8 +2974,6 @@
     <string name="dialog_title_cleared_private_data">Datos privados borrados</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Se han borrado todos los datos de facturación y contacto.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Suscribirse</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Seguir</string>
     <!-- Action button label to like on facebook -->
@@ -3617,4 +3695,16 @@
     <string name="acct_Welcome_to_Expedia">¡Bienvenido a Expedia!</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Ya existe una cuenta de Expedia con esa dirección de correo electrónico.</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0 - 17 años)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Zonas</string>
+    <string name="gym">Gimnasio</string>
+    <string name="room_service">Servicio de habitaciones</string>
+    <string name="business_center">Centro de negocios</string>
+    <string name="accessible">Acceso en silla de ruedas</string>
+    <string name="amenities">Servicios</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Clasificación</string>
 </resources>
