--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Siguiente: selecciona la fecha de check-out</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s: selecciona la fecha de check-out</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 huésped</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Arrastra para modificar las fechas</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Limpieza de la habitación</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Comodidad de la habitación</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Servicio y personal</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Condición del hotel</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Detalles del conductor</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Detalles del pago</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Opciones de pago</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Ingresa los detalles del conductor</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s o similar</string>
     <string name="car_model_unknown_template">Modelo exacto N/A</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Mostrador y vehículo en la terminal</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">A pagar el día de hoy</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Itinerario enviado a</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Indicaciones para llegar a %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Tarjeta de crédito/tarjeta de débito</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Información del huésped</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Ingresa tu información</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Detalles del pago</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Selecciona el tipo de pago</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Busca actividades</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Busca transporte</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Seleccionar fecha</string>
     <!-- Activity details highlights heading -->
@@ -607,7 +646,7 @@
     <!-- LX confirmation itin text -->
     <string name="lx_successful_checkout_email_label">Enviamos tus boletos a</string>
     <!-- LX reservation confirmation text -->
-    <string name="lx_successful_checkout_reservation_label">¡Tu reserva está confirmada!</string>
+    <string name="lx_successful_checkout_reservation_label">¡Tu reservación está confirmada!</string>
     <!-- Text for getting current location suggestion -->
     <string name="lx_getting_current_location">Estamos determinando la ubicación…</string>
     <!-- LX Error Fetching activity details -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Autos</string>
     <!-- Activities -->
     <string name="nav_lx">Actividades</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transporte</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Seleccionar la fecha de check-in</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} huéspedes</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Viaje de ida por &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Ingresa una dirección de correo electrónico válida</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Cargos con pago en el hotel:</string>
+    <string name="fees_paid_at_hotel">Cargos con pago en el hotel</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">A pagar a {brand} hoy:</string>
+    <string name="due_to_brand_today_TEMPLATE">A pagar a {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">Los &lt;b&gt;%1$s&lt;/b&gt; del cargo del resort se cobrarán en el hotel. El precio total de tu estadía será &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Información del pasajero</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Detalles del pasajero principal</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Ingresa los detalles del pasajero principal</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Pasajero principal</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Guardado</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Enviar por correo electrónico</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Agregar al calendario</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Rastrea el vuelo con Flight Track</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Llama al Servicio de atención a clientes de {brand}</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Vuelos a %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Indicaciones para llegar al hotel</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Alquilar un auto en %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Seleccionar habitación</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Reserva por teléfono</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Solo hoteles +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Solo +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ENCENDIDO</string>
     <string name="switch_off">APAGADO</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">de los huéspedes lo recomiendan</string>
     <string name="hotel_guest_recommend">de 5 - evaluación de los clientes</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Amenidades</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">No se ofrecen servicios</string>
     <!-- Business center amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d comentarios</item>
         <item quantity="other">%d comentarios</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">No hay comentarios</item>
+        <item quantity="one">Ver %d reseña</item>
+        <item quantity="two">Ver %d reseñas</item>
+        <item quantity="many">Ver %d reseñas</item>
+        <item quantity="other">Ver %d reseñas</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,14 +2757,20 @@
     <string name="total_price_for_stay">Precio total por la estadía</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Precio promedio por noche</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Precios promedio por noche • {count} Resultados</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Precio total por la estadía • {count} Resultados</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
-        <item quantity="zero">¡Ya no quedan habitaciones disponibles!</item>
+        <item quantity="zero">¡Ya no quedan habitaciones disponibles en nuestra aplicación!</item>
         <item quantity="one">¡Solo queda 1 habitación disponible!</item>
         <item quantity="two">¡Solo quedan %d habitaciones disponibles!</item>
         <item quantity="many">¡Solo quedan %d habitaciones disponibles!</item>
         <item quantity="other">¡Solo quedan %d habitaciones disponibles!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Información de la habitación</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">No reembolsable</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Ver habitación</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Compartir por</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Aviso de remodelación</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Más información</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Lo sentimos, no pudimos encontrar más detalles sobre esta habitación.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 noche</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Aplicar</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Cupón guardado</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Cupones y promociones</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Ingresa un cupón o un código de promoción</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Ingresa el código de cupón</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">¡Ahorraste %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Quitando el cupón</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Enviar</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Lo sentimos, pero este no es un código de cupón conocido.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Lo sentimos, pero este no es un código de cupón válido.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Lo sentimos, pero este hotel no acepta cupones.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">Lo sentimos, pero el cupón no puede aplicarse a este hotel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Lo sentimos, pero el cupón no puede aplicarse a esta reservación.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Lo sentimos, pero no podemos procesar cupones actualmente. Inténtalo de nuevo por favor.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">Lo sentimos, pero el precio promedio por noche no coincide con el mínimo establecido para este cupón.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Los cupones no pueden aplicarse a las habitaciones de Pago posterior. Selecciona una habitación de Pago inmediato.</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Lo sentimos, pero este cupón ya no está activo.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Los datos privados han sido eliminados</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Toda la información de facturación y de contacto ha sido eliminada.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Suscríbete</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Sigue a</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Te damos la bienvenida a Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Ya existe una cuenta de Expedia para este correo electrónico</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(De 0 a 17 años)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Áreas</string>
+    <string name="gym">Gimnasio</string>
+    <string name="room_service">Servicio de habitación</string>
+    <string name="business_center">Centro de negocios</string>
+    <string name="accessible">Facilidad para silla de ruedas</string>
+    <string name="amenities">Amenidades</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Clasificación por estrellas</string>
 </resources>
