--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Ensuite : sélectionnez une date de départ</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Sélectionnez une date de départ</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 personne</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Faites glisser pour modifier</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Propreté de la chambre</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Confort de la chambre</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Service et personnel</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Conditions de l\&apos;hôtel</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Informations sur le conducteur</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Informations de paiement</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Options de paiement</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Veuillez saisir les informations sur le conducteur</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s ou similaire</string>
     <string name="car_model_unknown_template">Modèle exact N/D</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Guichet et véhicule au terminal</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">À régler aujourd\&apos;hui</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Voyage envoyé à</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Itinéraire pour aller à : %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Carte de paiement</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Informations du client</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Saisissez vos informations</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Informations de paiement</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Sélectionnez un type de paiement</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Recherche d\&apos;activités</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Recherche de transports</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Choisir la date</string>
     <!-- Activity details highlights heading -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Voitures</string>
     <!-- Activities -->
     <string name="nav_lx">Activités</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transport</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Choisir la date d\&apos;arrivée</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} clients</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Aller simple pour &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Veuillez saisir une adresse e-mail valide</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Frais d\&apos;hôtel à régler sur place :</string>
+    <string name="fees_paid_at_hotel">Frais à régler à l\&apos;hôtel</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">Dû à {brand} aujourd\&apos;hui :</string>
+    <string name="due_to_brand_today_TEMPLATE">À régler à {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">Les frais d\&apos;établissement d\&apos;un montant de &lt;b&gt;%1$s&lt;/b&gt; seront payés à l\&apos;hôtel. Le prix total pour votre séjour sera de &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Informations sur le voyageur</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Informations sur le voyageur principal</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Veuillez saisir les informations du voyageur principal</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Voyageur principal</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Sauvegardées</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Partager par e-mail</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Ajouter au calendrier</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Suivre votre vol avec FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Appeler l\&apos;assistance clientèle {brand}</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Vols à destination de %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Itinéraire vers l\&apos;hôtel</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Louer une voiture à %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Choisir</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Réserver par téléphone</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Seulement les hôtels Accès VIP</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">+VIP Access uniquement</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">MARCHE</string>
     <string name="switch_off">ARRÊT</string>
@@ -2558,12 +2606,15 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">de recommandations clients</string>
     <string name="hotel_guest_recommend">sur 5 - avis clients</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount} %</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Services et équipements</string>
     <!-- Text that indicates no amenities at this property -->
-    <string name="AmenityNone">Aucun équipement offert</string>
+    <string name="AmenityNone">Aucuns services ou équipements offerts</string>
     <!-- Business center amenity -->
     <string name="AmenityBusinessCenter">Espace affaires</string>
     <!-- Fitness center amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d avis</item>
         <item quantity="other">%d avis</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Aucun avis</item>
+        <item quantity="one">Afficher %d avis</item>
+        <item quantity="two">Afficher %d avis</item>
+        <item quantity="many">Afficher %d avis</item>
+        <item quantity="other">Afficher %d avis</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,14 +2757,20 @@
     <string name="total_price_for_stay">Prix total du séjour</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Prix moyen, par nuit</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Prix moyen par nuit • {count} résultats</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Prix total du séjour • {count} résultats</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
-        <item quantity="zero">Plus de chambres disponibles sur notre app !</item>
+        <item quantity="zero">Plus de chambres disponibles sur notre appli !</item>
         <item quantity="one">Il reste 1 chambre disponible sur notre app !</item>
         <item quantity="two">Il reste %d chambres disponibles sur notre app !</item>
         <item quantity="many">Il reste %d chambres disponibles sur notre app !</item>
-        <item quantity="other">Il reste %d chambres disponibles sur notre app !</item>
+        <item quantity="other">Il reste %d chambres disponibles sur notre appli !</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Informations sur la chambre</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">Non remboursable</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Voir la chambre</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Partager via</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Avis de rénovation</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Plus d\&apos;informations</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Nous ne sommes pas en mesure de trouver d\&apos;autres informations sur cette chambre.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 nuit</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Appliquer</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Bons de réduction enregistrés</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Bons de réduction et promotions</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Veuillez saisir un bon de réduction ou un code promotionnel</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Veuillez saisir un code promotionnel</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">Vous avez économisé %s !</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Retrait du bon de réduction en cours</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Envoyer</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Désolé, ce code promotionnel est inconnu.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Désolé, ce bon de réduction n\&apos;est pas valide.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Désolé, cet hôtel n\&apos;accepte pas les bons de réduction.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">Désolé, ce bon de réduction ne peut pas être appliqué à cet hôtel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Désolé, ce bon de réduction ne peut pas être appliqué à cette réservation.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Désolés, nous ne sommes pas en mesure d\&apos;accepter les bons de réduction pour le moment. Veuillez réessayer.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">Désolé, le prix moyen par nuit est inférieur au minimum requis pour utiliser ce bon de réduction.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Les bons de réduction ne peuvent pas être appliqués pour des chambres de type « Payer plus tard ». Veuillez sélectionner une chambre de type « Payer maintenant ».</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Désolé, ce bon de réduction n\&apos;est plus actif.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Données personnelles supprimées</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Toutes les informations de facturation et les coordonnées utilisateurs ont été effacées.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">S\&apos;inscrire</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Suivez-nous</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Bienvenue sur Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Un compte Expedia existant est déjà associé à cette adresse e-mail</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 ans)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Quartiers</string>
+    <string name="gym">Salle de gym</string>
+    <string name="room_service">Service d\&apos;étage</string>
+    <string name="business_center">Espace affaires</string>
+    <string name="accessible">Accès pers. à mobilité réduite</string>
+    <string name="amenities">Services</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Nombre d\&apos;étoiles</string>
 </resources>
