--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Volgende: Selecteer uitcheckdatum</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Selecteer uitcheckdatum</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 gast</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Sleep om te wijzigen</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Netheid kamer</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Comfort kamer</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Service &amp; personeel</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Staat hotel</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
-    <string name="cars_calendar_start_date_label">Selecteer nu de inleverdatum</string>
+    <string name="cars_calendar_start_date_label">Volgende: Selecteerinleverdatum</string>
     <!-- Tooltip description when both start and end dates are selected -->
     <string name="cars_calendar_end_date_label">Sleep om te wijzigen</string>
     <!-- SeekBar tooltip description for pick up time-->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Bestuurdersinfo</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Betalingsinfo</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Betalingsopties</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Bestuurdersinfo invoeren</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s of soortgelijk</string>
     <string name="car_model_unknown_template">Exact model n.v.t.</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Balie &amp; voertuig bij terminal</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">Vandaag te betalen</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Reisplan gestuurd naar</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Route naar %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Creditcard/betaalpas</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Reizigersinfo</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Voer je gegevens in</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Betalingsinfo</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Selecteer betalingsmethode</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Activiteiten zoeken</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Vervoer zoeken</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Selecteer datum</string>
     <!-- Activity details highlights heading -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Auto\&apos;s</string>
     <!-- Activities -->
     <string name="nav_lx">Activiteiten</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Vervoer</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Kies de incheckdatum</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} gasten</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Enkele reis voor &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Voer een geldig e-mailadres in</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Toeslagen verrekend in hotel:</string>
+    <string name="fees_paid_at_hotel">Toeslagen betaald in hotel</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">Nu te betalen aan {brand}:</string>
+    <string name="due_to_brand_today_TEMPLATE">Te betalen aan {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">De resortkosten van &lt;b&gt;%1$s&lt;/b&gt; worden in het hotel verrekend. De totaalprijs voor je verblijf is &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Reizigersinformatie</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Info hoofdreiziger</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Info hoofdreiziger invoeren</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Hoofdreiziger</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Opgeslagen</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Deel via e-mail</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Toevoegen aan Agenda</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Volg met FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Bel de {brand}-klantenservice</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Vluchten naar %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Routebeschrijving naar hotel</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Huur een auto in %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Kamer selecteren</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Boek via telefoon</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Alleen +VIP Access hotels</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Alleen +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AAN</string>
     <string name="switch_off">UIT</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">van gasten bevelen dit aan</string>
     <string name="hotel_guest_recommend">/ 5 - gastenscore</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Voorzieningen</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">Geen voorzieningen aangeboden</string>
     <!-- Business center amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d beoordelingen</item>
         <item quantity="other">%d beoordelingen</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Geen beoordelingen</item>
+        <item quantity="one">Zie %d beoordeling</item>
+        <item quantity="two">Zie %d beoordelingen</item>
+        <item quantity="many">Zie %d beoordelingen</item>
+        <item quantity="other">Zie %d beoordelingen</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,14 +2757,20 @@
     <string name="total_price_for_stay">Totaalprijs voor verblijf</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Gemiddelde prijs, per nacht</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Gemiddelde prijzen per nacht • {count} resultaten</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Totaalprijs voor verblijf • {count} resultaten</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
-        <item quantity="zero">Geen kamers meer vrij!</item>
+        <item quantity="zero">Geen kamers vrij!</item>
         <item quantity="one">Nog maar 1 kamer over!</item>
         <item quantity="two">Nog maar %d kamers over!</item>
         <item quantity="many">Nog maar %d kamers over!</item>
         <item quantity="other">Nog maar %d kamers over!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Kamerinfo</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">Geen restitutie</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Kamer bekijken</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Delen via</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renovatiewerken</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Meer info</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Het spijt ons, we kunnen geen extra kamergegevens vinden.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 nacht</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Toepassen</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Opgeslagen coupons</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Coupons en deals</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Coupon of promocode invoeren</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Voer couponcode in</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">Je hebt %s bespaard!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Coupon wordt verwijderd</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Versturen</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Sorry, maar dit is geen gekende couponcode.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Sorry, maar dit is geen geldige couponcode.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Sorry, maar dit hotel accepteert geen coupons.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">Sorry, maar de coupon kan niet gebruikt bij dit hotel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Sorry, maar de coupon kan niet gebruikt bij deze boeking.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Sorry, maar we kunnen coupons op dit moment niet verwerken. Probeer het opnieuw.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">Sorry, maar de gemiddelde prijs per nacht voldoet niet aan de minimumvoorwaarden van deze coupon.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Coupons kunnen niet gebruikt worden als je in het hotel betaalt. Kies een kamer die je betaalt bij het boeken.</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Sorry, maar deze coupon is niet meer geldig.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Privégegevens gewist</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Alle opgeslagen betaal- en contactgegevens zijn verwijderd.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Abonneren</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Volgen</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Welkom bij Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Er bestaat al een Expedia-account met dit e-mailadres</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 jaar oud)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Buurten</string>
+    <string name="gym">Fitnesscentrum</string>
+    <string name="room_service">Roomservice</string>
+    <string name="business_center">Businesscentrum</string>
+    <string name="accessible">Rolstoeltoegankelijk</string>
+    <string name="amenities">Voorzieningen</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Sterrenclassificatie</string>
 </resources>
