--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Em seguida: selecione a data do check-out</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Selecione a data do check-out</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 hóspede</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Arraste para modificar</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Limpeza do quarto</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Conforto do quarto</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Serviço &amp; Equipe</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Conservação do hotel</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Informações do motorista</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Detalhes de pagamento</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Opções de pagamento</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Insira as informações sobre o motorista</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s ou semelhante</string>
     <string name="car_model_unknown_template">Modelo exato n/a</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Balcão e veículo no terminal</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">Devido hoje</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Itinerário enviado para</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Indicações para %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Cartão de crédito/débito</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Detalhes do hóspede</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Insira suas informações</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Detalhes de pagamento</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Selecione um método de pagamento</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Buscar atividades</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Buscar opções de transporte</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Selecione data</string>
     <!-- Activity details highlights heading -->
@@ -905,6 +944,8 @@
     <string name="nav_cars">Carros</string>
     <!-- Activities -->
     <string name="nav_lx">Atividades</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transporte</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Selecione a data de check-in</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} hóspedes</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Somente de ida para &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Insira um endereço de e-mail válido</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Taxas pagas ao hotel:</string>
+    <string name="fees_paid_at_hotel">Taxas pagas no hotel</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">Devido à {brand} hoje:</string>
+    <string name="due_to_brand_today_TEMPLATE">Devido à {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">A taxa de resort de &lt;b&gt;%1$s&lt;/b&gt; será cobrada pelo hotel. O total para sua estadia será de &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Informações do viajante</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Principais informações do viajante</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Insira os detalhes do viajante principal</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Viajante principal</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Salvo</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Compartilhe via e-mail</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Adicione ao Calendário</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Acompanhe com o FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Ligue para o suporte ao cliente da {brand}</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Voos para %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Como chegar ao hotel</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Alugue um carro em %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2535,8 +2582,7 @@
     <!-- Label for button that lets the user complete the booking through the normal flow -->
     <string name="book_now_ab_test">Selecionar quarto</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
-    <string name="book_by_phone">Reservar pelo telefone</string>
-
+    <string name="book_by_phone">Reserve pelo telefone</string>
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Somente hotéis +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Somente +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ON</string>
     <string name="switch_off">OFF</string>
@@ -2558,10 +2606,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">Recomendado pelos hóspedes</string>
     <string name="hotel_guest_recommend">de 5 (classificação do hóspede)</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Comodidades</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">Nenhuma comodidade oferecida</string>
     <!-- Business center amenity -->
@@ -2652,7 +2703,16 @@
         <item quantity="one">%d avaliação</item>
         <item quantity="two">%d avaliação</item>
         <item quantity="many">%d avaliação</item>
-        <item quantity="other">%d avaliação</item>
+        <item quantity="other">%d avaliações</item>
+    </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Nenhuma avaliação</item>
+        <item quantity="one">Ver %d avaliação</item>
+        <item quantity="two">Ver %d avaliações</item>
+        <item quantity="many">Ver %d avaliações</item>
+        <item quantity="other">Ver %d avaliações</item>
     </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
@@ -2697,6 +2757,10 @@
     <string name="total_price_for_stay">Preço total da estadia</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Média de preços por noite</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Média de preços por noite • {count} Resultados</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Preço total para a estadia • {count} Resultados</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">Nenhum quarto restante em nosso site!</item>
@@ -2705,6 +2769,8 @@
         <item quantity="many">Restam apenas %d quartos em nosso site!</item>
         <item quantity="other">Restam apenas %d quartos em nosso site!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Informações do quarto</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">Não-reembolsável</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Visualizar quarto</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Compartilhar via</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Aviso de reforma</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Mais informações</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Não foi possível encontrar mais informações para este quarto.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 noite</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Solicitar</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Cupons salvos</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Cupons e promoções</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Inserir cupons ou código promocional</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Digite o código do cupom</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">Você economizou %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Removendo cupom</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Enviar</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Este não é um código de cupom conhecido.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Este código de cupom não é válido.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Este hotel não aceita cupons.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">O cupom não pode ser aplicado a este hotel.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Não é possível aplicar este cupom a esta reserva.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Impossível possível processar cupons no momento. Tente novamente.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">O preço médio por noite não atende aos requisitos mínimos deste cupom.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Os cupons não podem ser aplicados a quartos com opção de pagar depois. Selecione um quarto com opção de pagar agora.</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Este cupom não está mais ativo.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Dados privados apagados</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Todas as informações salvas relativas a cobrança e contato foram removidas.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Inscreva-se</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Siga</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Bem-vindo à Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Já existe uma conta da Expedia com este endereço de e-mail</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 anos)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Áreas</string>
+    <string name="gym">Academia</string>
+    <string name="room_service">Serviço de quarto</string>
+    <string name="business_center">Business Center</string>
+    <string name="accessible">Acessibilidade</string>
+    <string name="amenities">Comodidades</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Classificação por estrelas</string>
 </resources>
