--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">Nästa: Välj utcheckningsdatum</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - Välj utcheckningsdatum</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 gäst</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">Dra för att ändra</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">Rummets renlighet</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">Rummets bekvämlighet</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">Service och personal</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">Hotellets skick</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">Förarens uppgifter</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">Betalningsuppgifter</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">Betalningsalternativ</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">Ange förarens uppgifter</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s eller liknande</string>
     <string name="car_model_unknown_template">Exakt biltyp inte tillgänglig</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">Disk och fordon i terminalen</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">Att betala idag</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">Resplan skickades till</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">Vägbeskrivning till %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">Kreditkort/bankkort</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">Gästinformation</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">Ange dina uppgifter</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">Betalningsuppgifter</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">Välj betalningstyp</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">Sök aktiviteter</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">Sök transport</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">Välj datum</string>
     <!-- Activity details highlights heading -->
@@ -885,7 +924,7 @@
     <!-- User Denied email permission try again button text -->
     <string name="authorize_email_facebook_button">Ge e-posttillåtelse</string>
     <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">För att logga in med Facebook behöver vi din tillåtelse att verifiera din e-postadress. \n\nTryck på Facebook-nedan för att ge {brand} tillåtelse att verifiera din e-postadress. Tack!</string>
+    <string name="user_denied_permission_email_message_TEMPLATE">För att logga in med Facebook behöver vi din tillåtelse att verifiera din e-postadress. \n\nTryck på Facebook-knappen nedan för att ge {brand} tillåtelse att verifiera din e-postadress. Tack!</string>
 
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Logga in med {brand}</string>
@@ -905,6 +944,8 @@
     <string name="nav_cars">Hyrbil</string>
     <!-- Activities -->
     <string name="nav_lx">Aktiviteter</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">Transport</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1643,7 +1684,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">Välj incheckningsdatum</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} gäster</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">Enkelresa för &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1837,9 +1878,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Ange en giltig e-postadress</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">Avgifter som betalas på hotellet:</string>
+    <string name="fees_paid_at_hotel">Avgifter som betalades på hotellet</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">Att betala {brand} idag:</string>
+    <string name="due_to_brand_today_TEMPLATE">Att betala {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">Resortavgiften på &lt;b&gt;%1$s&lt;/b&gt; kommer att debiteras på hotellet. Det totala priset för din vistelse blir &lt;b&gt;%2$s&lt;/b&gt;.</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1894,6 +1935,10 @@
     <string name="enter_traveler_info">Resenärens uppgifter</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Huvudresenärens uppgifter</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">Ange huvudresenärens uppgifter</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">Huvudresenär</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">Sparat</string>
     <!-- Edit button for traveler/payment -->
@@ -2157,8 +2202,6 @@
     <string name="share_trip">Dela via e-post</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">Lägg till i kalender</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">Följ med FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">Ring {brand}s kundtjänst</string>
     <!-- Add Insurance label -->
@@ -2190,6 +2233,10 @@
     <string name="flights_to_TEMPLATE">Flyg till %s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">Vägbeskrivning till hotellet</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">Hyr en bil i %1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2536,7 +2583,6 @@
     <string name="book_now_ab_test">Välj rum</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">Boka per telefon</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2546,6 +2592,8 @@
     <string name="filter_vip_access">Endast hotell med +VIP Access</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">Endast +VIP Access</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AV</string>
     <string name="switch_off">PÅ</string>
@@ -2558,14 +2606,17 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">av gästerna rekommenderar</string>
     <string name="hotel_guest_recommend">av 5 - gästbetyg</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">Bekvämligheter</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">Inga bekvämligheter erbjuds</string>
     <!-- Business center amenity -->
-    <string name="AmenityBusinessCenter">Business center</string>
+    <string name="AmenityBusinessCenter">Businesscenter</string>
     <!-- Fitness center amenity -->
     <string name="AmenityFitnessCenter">Gym</string>
     <!-- Hot tub on-site amenity -->
@@ -2595,7 +2646,7 @@
     <!-- Parking amenity -->
     <string name="AmenityParking">Parkering</string>
     <!-- Room service amenity -->
-    <string name="AmenityRoomService">Rumsserv.</string>
+    <string name="AmenityRoomService">Rumsservice</string>
     <!-- Accessible path of travel amenity -->
     <string name="AmenityAccessiblePaths">Handikappanpassad väg</string>
     <!-- Accessible bathroom amenity -->
@@ -2654,6 +2705,15 @@
         <item quantity="many">%d recensioner</item>
         <item quantity="other">%d recensioner</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">Inga recensioner</item>
+        <item quantity="one">Se %d recension</item>
+        <item quantity="two">Se %d recensioner</item>
+        <item quantity="many">Se %d recensioner</item>
+        <item quantity="other">Se %d recensioner</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2697,14 +2757,20 @@
     <string name="total_price_for_stay">Totalpris för vistelsen</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">Snittpris per natt</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">Snittpriser per natt • {count} resultat</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">Totalpris för vistelsen • {count} resultat</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
         <item quantity="zero">Inga rum kvar!</item>
-        <item quantity="one">Endast ett rum kvar!</item>
+        <item quantity="one">Endast 1 rum kvar!</item>
         <item quantity="two">Endast %d rum kvar!</item>
         <item quantity="many">Endast %d rum kvar!</item>
         <item quantity="other">Endast %d rum kvar!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">Rumsinformation</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">Ingen återbetalning</string>
     <!-- Label for free nights -->
@@ -2728,6 +2794,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">Se rum</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">Dela via</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renoveringsmeddelande</string>
     <!-- This property is undergoing renovations -->
@@ -2736,8 +2804,6 @@
     <string name="more_info">Mer info</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">Vi ber om ursäkt. Vi kunde inte hitta extra information för det här rummet.</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 natt</item>
@@ -2811,6 +2877,12 @@
     <string name="apply">Använd</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">Sparade kuponger</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">Kuponger och kampanjer</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">Ange kupong- eller kampanjkod</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">Ange kupongkod</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2821,8 +2893,12 @@
     <string name="coupon_saved_TEMPLATE">Du sparade %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">Raderar kupong</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">Skicka</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">Tyvärr känner vi inte igen kupongkoden.</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">Tyvärr är inte kupongkoden giltig.</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2849,6 +2925,8 @@
     <string name="coupon_error_hotel_excluded">Det här hotellet accepterar tyvärr inte kuponger.</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">Tyvärr kan inte kupongen tillämpas på det här hotellet.</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">Tyvärr kan inte kupongen tillämpas på den här bokningen.</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">Vi kan tyvärr inte processa kuponger just nu. Försök igen.</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2861,6 +2939,8 @@
     <string name="coupon_error_invalid_average_price">Tyvärr uppfyller inte snittpriset per natt minimumkravet för den här kupongen.</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">Kuponger kan inte tillämpas på hotellrum som betalas senare. Du måste välja betalningsalternativet \&apos;Betala nu\&apos;.</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">Tyvärr gäller inte kupongen längre.</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2893,8 +2973,6 @@
     <string name="dialog_title_cleared_private_data">Personliga uppgifter raderade</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">Alla fakturerings- och kontaktuppgifter har raderats.</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">Prenumerera</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">Följ</string>
     <!-- Action button label to like on facebook -->
@@ -3616,4 +3694,16 @@
     <string name="acct_Welcome_to_Expedia">Välkommen till Expedia</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">Ett Expediakonto existerar redan med den här e-postadressen</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 år)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">Områden</string>
+    <string name="gym">Gym</string>
+    <string name="room_service">Rumsservice</string>
+    <string name="business_center">Businesscenter</string>
+    <string name="accessible">Tillgänglighetsanpassade</string>
+    <string name="amenities">Bekvämligheter</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">Antal stjärnor</string>
 </resources>
