--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -1,6 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <!-- Hotels -->
+    <!-- Hotels Calendar Strings -->
+    <!-- Hotels calendar tooltip bottom line after a single date is selected -->
+    <string name="hotel_calendar_tooltip_bottom">ถัดไป: เลือกวันเช็คเอาท์</string>
+    <!-- When user hasn't picked check out date, we show something like: "Jan 21 - Select check out date" -->
+    <string name="select_checkout_date_TEMPLATE">%1$s - เลือกวันเช็คเอาท์</string>
+    <!-- Search form text hotels nights. %$s = formatted nights string. E.g. (3 nights) -->
+    <string name="nights_count_TEMPLATE">(%1$s)</string>
+    <!-- Hotels search form default text for number of guests -->
+    <string name="hotel_search_guest_default_text">1 คน</string>
+    <!-- Hotel calendar tooltip bottom line after two dates are selected E.g. Drag to Modify -->
+    <string name="hotel_calendar_bottom_drag_to_modify">ลากเพื่อปรับเปลี่ยน</string>
+
+    <!-- Hotels Reviews Strings -->
+    <!-- Hotels summary rating template-->
+    <string name="hotel_rating_summary_Template">{rating} - {attribute}</string>
+    <!-- Hotels rating room cleanliness string -->
+    <string name="hotel_rating_room_cleanliness">ความสะอาดของห้องพัก</string>
+    <!-- Hotels rating room comfort string -->
+    <string name="hotel_rating_room_comfort">ความสะดวกสบายของห้อง</string>
+    <!-- Hotels rating service and staff string -->
+    <string name="hotel_rating_service_and_staff">บริการและพนักงาน</string>
+    <!-- Hotels rating hotel condition string -->
+    <string name="hotel_rating_hotel_condition">สภาพของโรงแรม</string>
+
     <!-- Cars -->
     <!-- Cars Calendar Strings -->
     <!-- Tooltip description for selecting the start date -->
@@ -51,6 +76,8 @@
     <string name="cars_driver_details_text">รายละเอียดผู้ขับรถ</string>
     <!-- Text for payment details toolbar-->
     <string name="cars_payment_details_text">รายละเอียดการชำระเงิน</string>
+    <!-- Text for payment options toolbar-->
+    <string name="cars_payment_options_text">ตัวเลือกการชำระเงิน</string>
     <!-- Text for enter driver details-->
     <string name="enter_driver_details">ป้อนรายละเอียดผู้ขับรถ</string>
     <!-- Text for select saved contacts-->
@@ -138,9 +165,6 @@
     <!-- Car model templates-->
     <string name="car_model_name_template">%1$s หรือใกล้เคียง</string>
     <string name="car_model_unknown_template">ไม่ระบุรุ่นรถชัดเจน</string>
-
-    <!-- Desk & vehicle at terminal -->
-    <string name="desk_and_vehicle_terminal">เคาน์เตอร์และรถอยู่ที่อาคารผู้โดยสาร</string>
     <!-- Car checkout cost breakdown total due today -->
     <string name="car_cost_breakdown_due_today">ยอดที่ต้องจ่ายวันนี้</string>
     <!-- Car checkout cost breakdown total due at pick up -->
@@ -174,6 +198,19 @@
     <string name="successful_checkout_email_label">ส่งแผนการเดินทางไปยัง</string>
     <!-- Car confirmation directions text -->
     <string name="car_confirmation_directions">วิธีการเดินทางไป %1$s</string>
+
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_credit_debit_label">บัตรเครดิต/บัตรเดบิต</string>
+    <!-- Hotel Checkout Credit/Debit Card Payment Option Label -->
+    <string name="checkout_payment_option_google_wallet_label">Google Wallet</string>
+    <!-- Text for enter guest details line 1 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line1">รายละเอียดผู้เข้าพัก</string>
+    <!-- Text for enter guest details line 2 -->
+    <string name="checkout_hotelsv2_enter_guest_details_line2">ป้อนข้อมูลของคุณ</string>
+    <!-- Text for enter payment details line 1 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line1">รายละเอียดการชำระเงิน</string>
+    <!-- Text for enter payment details line 2 -->
+    <string name="checkout_hotelsv2_enter_payment_details_line2">เลือกประเภทการชำระเงิน</string>
 
     <!-- Car error strings -->
     <!-- Message for user that pick-up time is too early."  -->
@@ -241,8 +278,10 @@
     <!-- LX -->
     <!-- LX toolbar Date Range e.g. May 05 - May 10 -->
     <string name="lx_toolbar_date_range_template">%1$s - %2$s</string>
-    <!-- Search widget header text -->
+    <!--LX Search widget header text -->
     <string name="lx_search_title">ค้นหากิจกรรม</string>
+    <!--GT Search widget header text -->
+    <string name="gt_search_title">ค้นหาวิธีการเดินทาง</string>
     <!-- Button to show calendar and selected dates -->
     <string name="select_lx_search_dates">เลือกวันที่</string>
     <!-- Activity details highlights heading -->
@@ -907,6 +946,8 @@
     <string name="nav_cars">รถ</string>
     <!-- Activities -->
     <string name="nav_lx">กิจกรรม</string>
+    <!-- Ground Transport -->
+    <string name="nav_transport">การเดินทางภาคพื้นดิน</string>
 
     <!-- New launch screen -->
     <!-- Top deals tonight -->
@@ -1645,7 +1686,7 @@
     <!-- Calendar instruction text hotels no dates selected - "Select Check-in Date" -->
     <string name="calendar_instructions_hotels_no_dates_selected">เลือกวันเช็คอิน</string>
     <!-- Calendar instruction text hotels date range template. %1$s = Formatted start date, %2$s = formatted end date. E.g. May 12 - May 15 -->
-    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests} คน</string>
+    <string name="calendar_instructions_date_range_with_guests_TEMPLATE">{startdate} - {enddate}, {guests}</string>
     <!-- Flight details fragment -->
     <!-- Book now info label.  %s is the price.  E.g., "One way for $994" -->
     <string name="one_way_price_TEMPLATE">ตั๋วเที่ยวเดียวในราคา &lt;b&gt;%s&lt;/b&gt;</string>
@@ -1839,9 +1880,9 @@
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">โปรดป้อนอีเมลที่ถูกต้อง</string>
     <!-- Row header for when we show resort fees as its own line item -->
-    <string name="fees_paid_at_hotel">ค่าธรรมเนียมที่จ่ายที่โรงแรม:</string>
+    <string name="fees_paid_at_hotel">ค่าธรรมเนียมที่จ่ายที่โรงแรม</string>
     <!-- Row header for when the grand total of the user's hotel stay is more than what they owe at the time of reservation-->
-    <string name="due_to_brand_today_TEMPLATE">ยอดที่ต้องจ่าย {brand} วันนี้:</string>
+    <string name="due_to_brand_today_TEMPLATE">ต้องจ่ายให้ {brand}</string>
     <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
     <string name="resort_fee_disclaimer_TEMPLATE">ค่าธรรมเนียมรีสอร์ทจำนวน &lt;b&gt;%1$s&lt;/b&gt; จะถูกเรียกเก็บที่โรงแรม ราคารวมสำหรับการเข้าพักของคุณจะเป็น &lt;b&gt;%2$s&lt;/b&gt;</string>
     <!-- Pay later disclaimer at bottom of checkout -->
@@ -1896,6 +1937,10 @@
     <string name="enter_traveler_info">ข้อมูลผู้เดินทาง</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">รายละเอียดของผู้เดินทางหลัก</string>
+    <!-- AB test variate 1 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate1">ป้อนรายละเอียดผู้เดินทางหลัก</string>
+    <!-- AB test variate 2 - Traveler Details (for flights) -->
+    <string name="traveler_details_variate2">ผู้เดินทางหลัก</string>
     <!-- Saved button for traveler/payment -->
     <string name="saved_button">บันทึกไว้</string>
     <!-- Edit button for traveler/payment -->
@@ -2159,8 +2204,6 @@
     <string name="share_trip">แชร์ทางอีเมล</string>
     <!-- Button label for adding a recently booked flight to the calendar -->
     <string name="add_to_calendar">เพิ่มไปที่ปฏิทิน</string>
-    <!-- Button label for tracking recently booked flights to FlightTrack (another application) -->
-    <string name="add_to_flighttrack">ติดตามด้วย FlightTrack</string>
     <!-- Button label for calling expedia customer support -->
     <string name="call_customer_support_TEMPLATE">โทรติดต่อฝ่ายบริการลูกค้า {brand}</string>
     <!-- Add Insurance label -->
@@ -2192,6 +2235,10 @@
     <string name="flights_to_TEMPLATE">เที่ยวบินไปยัง%s</string>
     <!-- Summary of the user's hotel stay.  %1$s is the # of guests, %2$s is the duration, e.g. "3 Guests, Aug 1 to Aug 3" -->
     <string name="stay_summary_TEMPLATE">%1$s, %2$s</string>
+    <!-- Hotel confirmation directions text -->
+    <string name="hotel_confirmation_directions">เส้นทางไปโรงแรม</string>
+    <!-- Button label for getting flights to a particular location.  %s is a location, e.g. "Flights to San Francisco" -->
+    <string name="rent_a_car_TEMPLATE">เช่ารถใน%1$s</string>
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
@@ -2538,7 +2585,6 @@
     <string name="book_now_ab_test">เลือกห้อง</string>
     <!-- Label for button that lets the user complete the booking by calling a phone number -->
     <string name="book_by_phone">จองทางโทรศัพท์</string>
-
     <!-- Hotel Details Fragment -->
     <!-- Title for VIP Access message -->
     <string name="vip_access">+VIP Access</string>
@@ -2548,6 +2594,8 @@
     <string name="filter_vip_access">โรงแรม +VIP Access เท่านั้น</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="VIP_Access_Only">+VIP Access เท่านั้น</string>
+    <!-- Title for VIP Access message for Hotel Results -->
+    <string name="vip">+VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">เปิด</string>
     <string name="switch_off">ปิด</string>
@@ -2560,10 +2608,13 @@
     <!-- new material Hotel results cell guest rating -->
     <string name="customer_rating_percent_Template">{rating}{percent}</string>
     <!-- new material Hotel results cell guest recommend-->
-    <string name="guest_recommend">ของผู้เข้าพักแนะนำ</string>
     <string name="hotel_guest_recommend">จาก 5 - คะแนนจากผู้เข้าพัก</string>
+    <!-- new material Hotel results cell discount percentage -->
+    <string name="hotel_discount_percent_Template">{discount}%</string>
 
     <!-- Amenity strings -->
+    <!-- Label to show amenities -->
+    <string name="AmenityTitle">สิ่งอำนวยความสะดวก</string>
     <!-- Text that indicates no amenities at this property -->
     <string name="AmenityNone">ไม่มีสิ่งอำนวยความสะดวก</string>
     <!-- Business center amenity -->
@@ -2656,6 +2707,15 @@
         <item quantity="many">%d รีวิว</item>
         <item quantity="other">%d รีวิว</item>
     </plurals>
+
+    <!-- HOtel V2A number of reviews -->
+    <plurals name="hotel_number_of_reviews">
+        <item quantity="zero">ไม่มีรีวิว</item>
+        <item quantity="one">ดู %d รีวิว</item>
+        <item quantity="two">ดู %d รีวิว</item>
+        <item quantity="many">ดู %d รีวิว</item>
+        <item quantity="other">ดู %d รีวิว</item>
+    </plurals>
     <!--
          User review name and place review signature eg (John from San Diego, CA)
         1$ is the user name
@@ -2699,14 +2759,20 @@
     <string name="total_price_for_stay">ราคารวมสำหรับการเข้าพัก</string>
     <!-- Rate price for entire list, encompasses a group of hotel properties -->
     <string name="prices_avg_per_night">ราคาเฉลี่ยต่อคืน</string>
+    <!-- Hotel Results Pricing Header - Prices Avg Per Night along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_prices_avg_per_night_TEMPLATE">ราคาเฉลี่ยต่อคืน • {count} รายการ</string>
+    <!-- Hotel Results Pricing Header - Total Price For Stay along with the Number of Search Results -->
+    <string name="hotel_results_pricing_header_total_price_for_stay_TEMPLATE">ราคารวมสำหรับการเข้าพัก • {count} รายการ</string>
     <!-- Warning if there are only a few rooms left where %d represents the number of rooms left -->
     <plurals name="number_of_rooms_left">
-        <item quantity="zero">ไม่มีห้องว่าง</item>
+        <item quantity="zero">เต็มแล้ว!</item>
         <item quantity="one">เหลือเพียง 1 ห้อง!</item>
         <item quantity="two">เหลือเพียง %d ห้อง!</item>
         <item quantity="many">เหลือเพียง %d ห้อง!</item>
         <item quantity="other">เหลือเพียง %d ห้อง!</item>
     </plurals>
+    <!-- The text we use to show room info for expanded room -->
+    <string name="room_information">ข้อมูลห้องพัก</string>
     <!-- The text we use to message that the room in non-refundable -->
     <string name="non_refundable">ไม่สามารถคืนเงินได้</string>
     <!-- Label for free nights -->
@@ -2730,6 +2796,8 @@
     <!-- View Room button text -->
     <string name="view_room_button_text">ดูห้องพัก</string>
 
+    <!-- Share via when user is shareing hotel listing -->
+    <string name="share_via">แชร์ผ่าน</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">ประกาศการปรับปรุงพื้นที่</string>
     <!-- This property is undergoing renovations -->
@@ -2738,8 +2806,6 @@
     <string name="more_info">ข้อมูลเพิ่มเติม</string>
 
     <!-- Booking info -->
-    <!-- Error if we couldn't find the room type details -->
-    <string name="error_room_type_nonexistant">ขออภัย ระบบไม่สามารถหาข้อมูลเพิ่มเติมสำหรับห้องพักนี้</string>
     <!-- Quantity for the length of stay -->
     <plurals name="length_of_stay">
         <item quantity="one">1 คืน</item>
@@ -2813,6 +2879,12 @@
     <string name="apply">ใช้</string>
 
     <!-- Coupon dialog -->
+    <!-- Saved coupon title -->
+    <string name="saved_coupon">คูปองที่บันทึกไว้</string>
+    <!-- Coupon Widget Title -->
+    <string name="coupon_promo_title">คูปองและโปรโมชั่น</string>
+    <!-- Title on dialog imploring users to enter coupons -->
+    <string name="enter_coupon_promo_code">ป้อนรหัสคูปองหรือรหัสโปรโมชั่น</string>
     <!-- Title on dialog imploring users to enter coupons -->
     <string name="enter_coupon_code">กรอกรหัสคูปอง</string>
     <!-- Message shown when applying coupon (in progress) -->
@@ -2823,8 +2895,12 @@
     <string name="coupon_saved_TEMPLATE">คุณประหยัด %s!</string>
     <!-- Message shown when a coupon is being removed -->
     <string name="coupon_removing_dialog">กำลังลบคูปอง</string>
+    <!-- Coupon submit button -->
+    <string name="coupon_submit_button">ส่ง</string>
 
     <!-- Coupon Error Strings -->
+    <!-- Error when applying coupon - the coupon isn't known -->
+    <string name="coupon_error_unknown">ขออภัย ระบบไม่พบรหัสคูปองนี้</string>
     <!-- Error when applying coupon - the coupon isn't recognized -->
     <string name="coupon_error_unrecognized">ขออภัย รหัสคูปองนี้ไม่ถูกต้อง</string>
     <!-- Error when applying coupon - the coupon has expired -->
@@ -2851,6 +2927,8 @@
     <string name="coupon_error_hotel_excluded">ขออภัย โรงแรมนี้ไม่รับคูปอง</string>
     <!-- Error when applying coupon - the hotel does not accept coupons -->
     <string name="coupon_error_invalid_hotel">ขออภัย ไม่สามารถใช้คูปองกับโรงแรมนี้ได้</string>
+    <!-- Error when applying coupon - the package does not accept coupons -->
+    <string name="coupon_error_invalid_booking">ขออภัย ไม่สามารถใช้คูปองกับการจองนี้ได้</string>
     <!-- Error when applying coupon - our coupon servers are down -->
     <string name="coupon_error_service_down">ขออภัย เราไม่สามารถดำเนินการใช้คูปองได้ในขณะนี้ โปรดลองใหม่อีกครั้ง</string>
     <!-- Error when applying coupon - session timeout -->
@@ -2863,6 +2941,8 @@
     <string name="coupon_error_invalid_average_price">ขออภัย ราคาเฉลี่ยต่อคืนไม่ถึงมูลค่าขั้นต่ำสำหรับใช้คูปองนี้</string>
     <!-- Error when applying coupon - Pay Later Hotel -->
     <string name="coupon_error_pay_later_hotel">คูปองใช้กับห้องพักแบบจ่ายทีหลังไม่ได้ โปรดเลือกห้องพักแบบจ่ายตอนนี้</string>
+    <!-- Error when applying coupon - Not Active -->
+    <string name="coupon_error_not_active">ขออภัย คูปองนี้ไม่สามารถใช้งานได้แล้ว</string>
 
     <!-- Sharing bookings via email -->
     <!-- Cancellation policy label -->
@@ -2895,8 +2975,6 @@
     <string name="dialog_title_cleared_private_data">ล้างข้อมูลส่วนตัวแล้ว</string>
     <!-- Dialog Message telling the user they have been signed of their account and all data saved about them has been removed -->
     <string name="dialog_message_cleared_private_data">ล้างข้อมูลบัตรเครดิตและข้อมูลติดต่อทั้งหมดที่บันทึกไว้แล้ว</string>
-    <!-- Action button label to Subscribe to our mailing list -->
-    <string name="Subscribe">สมัครรับข่าวสาร</string>
     <!-- Action button label to follow on twitter -->
     <string name="Follow">ติดตาม</string>
     <!-- Action button label to like on facebook -->
@@ -3618,4 +3696,16 @@
     <string name="acct_Welcome_to_Expedia">ยินดีต้อนรับสู่เอ็กซ์พีเดีย</string>
     <!-- Title of "Account Already Exists" error dialog box -->
     <string name="acct_Expedia_account_already_exists">อีเมลนี้มีบัญชีเอ็กซ์พีเดียอยู่แล้ว</string>
+    <!-- Children age label on hotel search -->
+    <string name="children_age_label">(0-17 ปี)</string>
+
+    <!-- Filters Strings -->
+    <string name="neighborhoods">ย่าน</string>
+    <string name="gym">ฟิตเนส</string>
+    <string name="room_service">รูมเซอร์วิส</string>
+    <string name="business_center">ศูนย์ธุรกิจ</string>
+    <string name="accessible">อำนวยความสะดวกผู้พิการ</string>
+    <string name="amenities">สิ่งอำนวยความสะดวก</string>
+    <string name="plus_vip">+VIP</string>
+    <string name="star_rating">ระดับดาว</string>
 </resources>
